--- a/idev_libthing.ipynb
+++ b/idev_libthing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,15 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['config.ini']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import configparser\n",
     "config = configparser.ConfigParser()\n",
     "config.read('config.ini')\n",
-    "\n",
-    "business_name = config['business']['business_name']"
+    "\n"
    ]
   },
   {
@@ -29,7 +39,19 @@
    "outputs": [],
    "source": [
     "\n",
-    "catalog = pd.read_csv('data/librarything_plazzer.tsv', sep='\\t')\n"
+    "libraryThing_path = config['libraryThing']['input_path']\n",
+    "business_name = config['business']['business_name']\n",
+    "square_path = config['square']['output_path']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "catalog = pd.read_csv(libraryThing_path, sep='\\t')"
    ]
   },
   {
@@ -77,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reference_handle = None\n",
+    "#reference_handle = None\n",
     "token = None\n",
     "item_name = catalog['Title'].tolist()\n",
     "variation_name = None\n",
@@ -167,7 +189,7 @@
    "outputs": [],
    "source": [
     "#output.to_csv('data/square_bulk_upload.csv', index=False)\n",
-    "output.to_excel(\"data/square_bulk_upload.xlsx\", index=False, engine='openpyxl')"
+    "output.to_excel(data/square_bulk_upload.xlsx, index=False, engine='openpyxl')"
    ]
   }
  ],
