add make directory code

--- a/idev_libthing.ipynb
+++ b/idev_libthing.ipynb
@@ -34,6 +34,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add the path to the data directory if doesn't exist\n",
+    "from pathlib import Path\n",
+    "Path(\"data\").mkdir(parents=True, exist_ok=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -184,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
